documentation pour les routes api/clients
